[package]
name = "null-or-die"
version = "0.0.22"
edition = "2024"

[lib]
name = "nod"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
lewton = "0.10.2"
md5 = "0.8.0"
png = "0.18.1"
rssp = { git = "https://github.com/pnn64/rssp", rev = "f6e7be3" }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
zstd = "0.13.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
